# AutoDataPrep

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/nlp_project/: __init__.py
