[project]
name = "nlp-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "elbazhaim", email = "elbaz7haim@gmail.com" }
]
dependencies = [
    "transformers>=4.43.2",
    "langchain>=0.2.11",
    "ipython>=8.26.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_project"]
